mdapipkg/objects/Membership_History__c.object
<CustomObject>
    <description>This houses acceptance data (from which renewal qualifications are determined. It also allows for members to leave and then create a new record when rejoining.

RP:15/12: Renamed it to &apos;Membership History&apos; from &apos;Acceptance Data&apos;.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Acceptance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Active__c</fullName>
        <label>Chapter Active?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Deactivate old primary chapter</fullName>
                </value>
                <value>
                    <fullName>Keep old primary chapter as secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Acceptance_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cycle_Start_Date__c</fullName>
        <label>Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Left__c</fullName>
        <label>Date Left</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Join_Date__c</fullName>
        <description>Date joined YPO or YPO Gold. Field YPO Gold/YPO? will show if this is YPO join date or YPO Gold join date.</description>
        <inlineHelpText>Date joined YPO or YPO Gold. Field YPO Gold/YPO? will show if this is YPO join date or YPO Gold join date.</inlineHelpText>
        <label>Date Joined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Other__c</fullName>
        <inlineHelpText>Populate this field if &apos;Other&apos; is selected as  Reason</inlineHelpText>
        <label>Reason Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Expelled</fullName>
                </value>
                <value>
                    <fullName>Failure to Pay Dues and Recertify</fullName>
                </value>
                <value>
                    <fullName>Failure to pay dues</fullName>
                    <label>Failure to Pay Dues</label>
                </value>
                <value>
                    <fullName>Failure to recertify</fullName>
                    <label>Failure to Recertify</label>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Transitioned</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Reinstated</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YPO_WPO__c</fullName>
        <label>YPO/YPO Gold?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YPO</fullName>
                </value>
                <value>
                    <fullName>YPO Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Membership History</label>
    <listViews>
        <fullName>Membership_History_All</fullName>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>YPO_WPO__c</columns>
        <columns>Join_Date__c</columns>
        <columns>Date_Left__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>Membership History - All</label>
    </listViews>
    <listViews>
        <fullName>Membership_History_Deceased</fullName>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>YPO_WPO__c</columns>
        <columns>Join_Date__c</columns>
        <columns>Date_Left__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deceased</value>
        </filters>
        <label>Membership History - Deceased</label>
    </listViews>
    <listViews>
        <fullName>Membership_History_Member</fullName>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>YPO_WPO__c</columns>
        <columns>Join_Date__c</columns>
        <columns>Date_Left__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Member</value>
        </filters>
        <label>Membership History - Member</label>
    </listViews>
    <listViews>
        <fullName>Membership_History_Resigned</fullName>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>YPO_WPO__c</columns>
        <columns>Join_Date__c</columns>
        <columns>Date_Left__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Resigned</value>
        </filters>
        <label>Membership History - Resigned</label>
    </listViews>
    <nameField>
        <displayFormat>MH-{0000}</displayFormat>
        <label>Membership History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Left_to_be_Populated</fullName>
        <active>false</active>
        <description>Filll in date left</description>
        <errorConditionFormula>IF(AND( OR( ISPICKVAL( Status__c , &apos;Resigned&apos;), ISPICKVAL( Status__c , &apos;Deceased&apos;)), ISBLANK( Date_Left__c )) , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Date_Left__c</errorDisplayField>
        <errorMessage>Fill in Date Left</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Populate_Reason_Other</fullName>
        <active>false</active>
        <description>This VR will make sure to fill in Reason Other field if Reason is populated with &apos;Other&apos;.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL( Reason__c , &apos;Other&apos; ), ISBLANK( Reason_Other__c )), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Please fill in Reason Other field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_to_be_Populated</fullName>
        <active>false</active>
        <description>This VR will make sure that &apos;Reason&apos; field is filled if Status &apos;Resigned&apos;</description>
        <errorConditionFormula>IF(AND( OR(ISPICKVAL( Status__c , &apos;Resigned&apos;), ISPICKVAL( Status__c , &apos;Deceased&apos;)), ISPICKVAL( Reason__c , &apos;&apos;)), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Please select the reason for resigning</errorMessage>
    </validationRules>
</CustomObject>